--- a/src/scss/modules/general.scss
+++ b/src/scss/modules/general.scss
@@ -1,5 +1,11 @@
 @import "../variables.scss";
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
 }
